--- a/body 2 {.css
+++ b/body 2 {.css
@@ -16,20 +16,21 @@ header, section, div, footer {
 }
 
 h1, h2, p, a {
-    color: #fff; 
+    color: #fff;
+}
 
 a {
     text-decoration: none;
     color: #add8e6;
     margin-right: 20px;
     padding: 10px 20px;
-    background-color: rgba(255, 255, 255, 0.2); 
-    border-radius: 4px; 
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 4px;
 }
 
 a:hover {
     color: #00f;
-    background-color: rgba(255, 255, 255, 0.4); 
+    background-color: rgba(255, 255, 255, 0.4);
 }
 
 .container {
