--- a/body {.css
+++ b/body {.css
@@ -60,14 +60,14 @@ ul {
 }
 
 footer {
-    background-color: rgba(0, 0, 0, 0.6); /* Fundo semitransparente */
+    background-color: rgba(0, 0, 0, 0.6);
     padding: 10px 0;
     text-align: center;
 }
 
 footer p {
-    font-size: 12px; /* Tamanho reduzido para o texto do rodapé */
-    color: #ccc; /* Cor mais clara para o texto */
+    font-size: 12px;
+    color: #ccc;
     margin: 0;
 }
 
