--- a/teste.css
+++ b/teste.css
@@ -1,4 +1,3 @@
-/* Estilos gerais */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -11,41 +10,40 @@ body {
 }
 
 header, section, div, footer {
-    background-color: rgba(0, 0, 0, 0.6); /* Fundo semitransparente para maior contraste */
+    background-color: rgba(0, 0, 0, 0.6); 
     padding: 20px;
-    border-radius: 8px; /* Bordas arredondadas */
-    margin-bottom: 20px; /* Espaço entre seções */
+    border-radius: 8px; 
+    margin-bottom: 20px; 
 }
 
-/* Estilização dos títulos e texto */
 h1, h2, p, a {
-    color: #fff; /* Texto branco para contraste */
+    color: #fff; 
 }
 
-/* Estilização dos links */
+
 a {
     text-decoration: none;
     color: #add8e6;
     margin-right: 20px;
     padding: 10px 20px;
-    background-color: rgba(255, 255, 255, 0.2); /* Fundo semitransparente nos links */
-    border-radius: 4px; /* Bordas arredondadas para os links */
-    transition: background-color 0.3s, color 0.3s; /* Transição suave para o hover */
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 4px; 
+    transition: background-color 0.3s, color 0.3s;
 }
 
 a:hover {
     color: #00f;
-    background-color: rgba(255, 255, 255, 0.4); /* Mais visível ao passar o mouse */
+    background-color: rgba(255, 255, 255, 0.4);
 }
 
-/* Container principal */
+
 .container {
     max-width: 960px;
     margin: 0 auto;
     padding: 20px;
 }
 
-/* Estilização do formulário */
+
 form {
     max-width: 600px;
     margin: 0 auto;
@@ -69,14 +67,14 @@ input[type="submit"] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    transition: background-color 0.3s; /* Transição suave para o hover */
+    transition: background-color 0.3s; 
 }
 
 input[type="submit"]:hover {
     background-color: #00008b;
 }
 
-/* Navegação */
+
 nav {
     background: rgba(0, 0, 0, 0.6);
 }
@@ -95,7 +93,7 @@ nav ul li {
 nav ul li a {
     color: #fff;
     padding: 10px 20px;
-    background-color: rgba(0, 0, 0, 0.4); /* Fundo semitransparente nos links de navegação */
+    background-color: rgba(0, 0, 0, 0.4); 
     border-radius: 4px;
     transition: background-color 0.3s, color 0.3s;
 }
@@ -105,12 +103,12 @@ nav ul li a:hover {
     color: #add8e6;
 }
 
-/* Seções principais */
+
 main {
     padding: 20px 0;
 }
 
-/* Projetos */
+
 .project {
     margin-bottom: 20px;
     padding: 15px;
